--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+main/node_modules
+contracts/node_modules
+contracts/artifacts
+contracts/cache
 
-# dependencies
 /node_modules
 /.pnp
 .pnp.*
