--- a/main_app/package.json
+++ b/main_app/package.json
@@ -9,16 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.14.0",
+    "@tanstack/react-query": "^5.85.5",
+    "@web3modal/wagmi": "^5.1.11",
+    "ethers": "^6.15.0",
+    "multer": "^2.0.2",
+    "next": "15.4.6",
+    "prisma": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.6"
+    "viem": "^2.34.0",
+    "wagmi": "^2.16.4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "hardhat": "^3.0.0",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
