--- a/main_app/package.json
+++ b/main_app/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.85.5",
     "@web3modal/wagmi": "^5.1.11",
     "ethers": "^6.15.0",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.540.0",
     "multer": "^2.0.2",
     "next": "15.4.6",
