--- a/main_app/package.json
+++ b/main_app/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.540.0",
     "multer": "^2.0.2",
     "next": "15.4.6",
+    "pino-pretty": "^13.1.1",
     "prisma": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
