--- a/main_app/package.json
+++ b/main_app/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.85.5",
     "@wagmi/core": "^2.20.3",
     "@web3modal/wagmi": "^5.1.11",
+    "aws-sdk": "^2.1692.0",
     "ethers": "^6.15.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.540.0",
@@ -23,6 +24,7 @@
     "prisma": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "uuid": "^11.1.0",
     "viem": "^2.34.0",
     "wagmi": "^2.16.4"
   },
