--- a/main_app/package.json
+++ b/main_app/package.json
@@ -22,7 +22,7 @@
     "framer-motion": "^12.24.0",
     "lucide-react": "^0.540.0",
     "multer": "^2.0.2",
-    "next": "15.4.6",
+    "next": "^15.4.7",
     "pino-pretty": "^13.1.3",
     "prisma": "^6.19.1",
     "react": "18.3.1",
